hikey960_defconfig: Add Mali Bifrost config options
Now that the bifrost build issues are sorted, add
the config options to the defconfig to build it in.

Signed-off-by: John Stultz <john.stultz@linaro.org>
Change-Id: I347cc3b7c2a31e939c914f43d400db2914cdd3c7

--- a/arch/arm64/configs/hikey960_defconfig
+++ b/arch/arm64/configs/hikey960_defconfig
@@ -374,6 +374,7 @@ CONFIG_MEDIA_TUNER_IT913X=y
 CONFIG_MEDIA_TUNER_R820T=y
 CONFIG_MEDIA_TUNER_MXL301RF=y
 CONFIG_MEDIA_TUNER_QM1D1C0042=y
+CONFIG_MALI_DEVFREQ=y
 CONFIG_DRM=y
 CONFIG_DRM_FBDEV_OVERALLOC=200
 CONFIG_DRM_I2C_ADV7511=y
@@ -517,6 +518,10 @@ CONFIG_ION_CMA_HEAP=y
 CONFIG_MAILBOX=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_EXTCON=y
+CONFIG_MALI_MIDGARD=y
+CONFIG_MALI_PLATFORM_NAME="hisilicon"
+CONFIG_MALI_EXPERT=y
+CONFIG_MALI_PWRSOFT_765=y
 CONFIG_PHY_XGENE=y
 CONFIG_PHY_HI6220_USB=y
 CONFIG_PHY_HI3660_USB=y
